--- a/package.json
+++ b/package.json
@@ -17,18 +17,15 @@
   },
   "homepage": "https://github.com/chadwtkns/chadwtkns.github.io",
   "devDependencies": {
-    "gulp": "3.8.10",
-    "gulp-autoprefixer": "1.0.1",
-    "gulp-clean": "0.3.1",
-    "gulp-concat": "2.4.1",
-    "gulp-jshint": "1.8.5",
-    "gulp-jsonminify": "0.0.2",
-    "gulp-minify-css": "0.3.9",
-    "gulp-minify-html": "0.1.5",
-    "gulp-notify": "1.8.0",
-    "gulp-rename": "1.2.0",
-    "gulp-uglify": "1.0.1",
-    "gulp-util": "3.0.1",
-    "main-bower-files": "2.0.0"
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "gulp-wait": "0.0.2"
   }
 }
